--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "lil-gui": "^0.19.1",
     "vite": "^5.0.0"
   },
   "dependencies": {
